@@ -44,6 +44,7 @@
     * 4095 new filter host auxiliary tags
     * 4106 new filter host/service-service-level...
     * 4107 Now you are able to search for check plugins
+    * 3997 New metric for check_icmp...
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
     * 4046 FIX: Repaired html rendering....
